--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
@@ -7,7 +6,11 @@
     <fragment
         android:id="@+id/fragment_one"
         android:name="ru.itis.summerpractice24.FragmentOne"
-        android:label="One" />
+        android:label="One">
+        <action
+            android:id="@+id/action_fragment_one_to_details"
+            app:destination="@id/fragment_details" />
+    </fragment>
 
     <fragment
         android:id="@+id/fragment_two"
@@ -33,14 +36,5 @@
         android:id="@+id/fragment_details"
         android:name="ru.itis.summerpractice24.FragmentDetails"
         android:label="Details" />
-
-    <action
-        android:id="@+id/action_fragment_one_to_details"
-        app:destination="@id/fragment_details"
-        app:enterAnim="@anim/slide_in_right"
-        app:exitAnim="@anim/slide_out_left"
-        app:popEnterAnim="@anim/slide_in_left"
-        app:popExitAnim="@anim/slide_out_right" />
-
 
 </navigation>
